automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 
     <form action="/checkout" method="post">
       <input type="text" name="item">
-      <input type="button" name="submit" value="submit">
+      <input type="submit" name="submit" value="submit">
     </form>
 
   </body>
